# Project03_MCP

./: README.md
mcp-client/: pyproject.toml
mcp-client/src/mcp-client/: client.py  client_test.py  server.py
mcp-gaode-client/: pyproject.toml
mcp-gaode-client/src/mcp-gaode-client/: client.py  servers_config.json
mcp_get_weather/: pyproject.toml
mcp_get_weather/src/mcp_get_weather/: __main__.py  server.py
mcp_get_weather/src/mcp_get_weather.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
